@@ -1,3 +1,6 @@
 ## [Unreleased]
 - Split `View` into `View` and `ViewMut`. Note that creating a `View` still requires mutable access to the
   archetype/world, but can be useful for passing around read-only access to a given entity.
+- The `iter`/`iter_mut` functions on archetypes now return a `View`/`ViewMut` with named component fields rather than
+  anonymous tuples, making element access less sensitive to component order changes. This also makes iteration more
+  compatible with the `ArchetypeHas` trait, as that can be used to generically access components from views.
